# delo

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/algorithms/: average_hash.rs  difference_hash.rs  exact_hash.rs  mod.rs  orb.rs  perceptual_hash.rs
src-tauri/src/api/: mod.rs
src-tauri/src/core/: mod.rs  types.rs
src-tauri/src/core/types/: compact_hash.rs  mod.rs
src-tauri/src/core/utils/: file_utils.rs  hash_utils.rs  image_utils.rs  math_utils.rs  mod.rs
src-tauri/src/detection/: duplicate.rs  lsh.rs  mod.rs
src/assets/css/: main.css  variables.css
src/components/: AlgorithmSelector.vue  ImagePreview.vue
src/components/icons/: FolderIcon.vue  PlusIcon.vue  ProcessIcon.vue  TrashIcon.vue  XIcon.vue
src/components/ui/: Button.vue  Card.vue  ImageCard.vue
src/composables/: useFolderSelection.js  useImageProcessing.js
src/layouts/: AppLayout.vue
src/utils/: format.js  tauri.js
src/views/: Home.vue  Results.vue
